--- a/redditApp/templates/layout.html
+++ b/redditApp/templates/layout.html
@@ -28,7 +28,8 @@
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="#">Placeholder</a>
+                        <a class="nav-item nav-link" href="{{ url_for('search_for_subreddit') }}">Search for subreddit</a>
+                        <a class="nav-item nav-link" href="#">PH</a>
                     </div>
                 </div>
             </div>
