--- a/redditApp/templates/redditor.html
+++ b/redditApp/templates/redditor.html
@@ -1,11 +1,20 @@
 {% extends "layout.html" %} {% block content%}
-<div>
-    Name: {{ redditor }}
+<div class="content-section">
+    <div class="media">
+        <img class="rounded-circle account-img" src="{{ avatar }}">
+        <div class="media-body">
+            <h3 class="">u/{{ redditor.name }}</h2>
+                <p class="text-secondary">Created: {{ get_date(redditor) }} ago</p>
+                <p class="text-secondary">Karma: {{ redditor.comment_karma }}</p>
+        </div>
+    </div>
 </div>
-<div>
-    karma: {{ redditor.comment_karma }}
+
+{% for comment in redditor.comments.new() %}
+<div class="card mb-3">
+    <pre class="text-muted card-header" style="font-size: small;background-color: rgba(228, 228, 228, 0.719);">Posted {{ get_date(comment) }} ago in a <a href="{{ url_for('post', post_id=comment.submission) }}" class="">thread</a> in <a class="mr-2" href="{{ url_for('open_subreddit', subreddit_name=comment.submission.subreddit) }}">r/{{ comment.submission.subreddit }}</a></pre>
+    <div class="card-body">
+        {{ comment.body }}
+    </div>
 </div>
-<div>
-    created: {{ get_date(redditor) }} ago
-</div>
-{% endblock content %}
+{% endfor %} {% endblock content %}
