--- a/redditApp/templates/search.html
+++ b/redditApp/templates/search.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %} {% block content %}
 <div class="content-section">
-    <form method="POST" action="{{ url_for('search_for_subreddit') }}">
+    <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
             <div class="form-group">
