--- a/redditApp/templates/home.html
+++ b/redditApp/templates/home.html
@@ -8,7 +8,7 @@
         <a class="btn btn-sm" style="background-color: #b3ffff" href="#">{{ post.link_flair_text }}</a> {% endif %}
     </div>
     <div class="card-footer text-muted .small" style="font-size: small">
-        Posted by {% if redditor_exists(post.author) %} <a class="mr-2" href="{{ url_for('redditor', redditor_name=post.author) }}">u/{{ post.author }}</a>{% else %}[deleted]{% endif %}{{ get_date(post) }} ago
+        Posted by {% if redditor_exists(post.author.name) %} <a class="mr-2" href="{{ url_for('redditor', redditor_name=post.author) }}">u/{{ post.author }}</a>{% else %}[deleted]{% endif %}{{ get_date(post) }} ago
         <a class="btn btn-sm ml-2 mb-1 text-muted" style="font-size: small" href="{{ url_for('post', post_id=post) }}">{{ post.num_comments }} Comments</a>
     </div>
 </article>
